--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,7 +19,7 @@
     </session-config>
     <welcome-file-list>
         <welcome-file>
-            Menu.jsp
+            menu.jsp
         </welcome-file>
     </welcome-file-list>
     
